fix: gap below swiper navigation dots

--- a/src/App.css
+++ b/src/App.css
@@ -5,27 +5,19 @@
   font-family: "Quicksand", "sans-serif";
 }
 
-.ranges-slider > .swiper-pagination {
-  bottom: -5px;
-}
-
-.testimonialswiper .swiper-pagination {
-  bottom: -5px;
-}
-
 .swiper-pagination-bullet {
-  width: 12px;
-  height: 12px;
-  background: #202925;
-  border-radius: 50%;
-  transition: all 0.2s ease-in-out;
+  width: 12px !important;
+  height: 12px !important;
+  background: #202925 !important;
+  border-radius: 50% !important;
+  transition: all 0.2s ease-in-out !important;
 }
 
 .swiper-pagination-bullet-active {
-  width: 24px;
-  height: 12px;
-  border-radius: 10px;
-  background: #000000;
+  width: 24px !important;
+  height: 12px !important;
+  border-radius: 10px !important;
+  background: #000000 !important;
 }
 
 @keyframes marquee {
